HW2/parser.output
Terminals unused in grammar

    ELSE
    TYPE
    '+'
    '-'
    '*'
    '/'
    CAST
    DOUBLEOP


Grammar

    0 $accept: Program $end

    1 Program: Statements

    2 Statements: Statement
    3           | Statements Statement

    4 Statement: LBRACE Statements RBRACE
    5          | Type ID SC
    6          | Type ID ASSIGN Exp SC
    7          | ID ASSIGN Exp SC
    8          | Call SC
    9          | RETURN SC
   10          | IF LPAREN Exp RPAREN Statement
   11          | WHILE LPAREN Exp RPAREN Statement
   12          | BREAK SC
   13          | CONTINUE SC

   14 Call: ID LPAREN Exp RPAREN

   15 Type: INT
   16     | BYTE
   17     | BOOL

   18 Exp: Exp BINOP Exp
   19    | ID
   20    | Call
   21    | NUM
   22    | NUM B
   23    | STRING
   24    | TRUE
   25    | FALSE
   26    | NOT Exp
   27    | Exp AND Exp
   28    | Exp OR Exp
   29    | Exp RELOP Exp
   30    | LPAREN Exp RPAREN
   31    | LPAREN Type RPAREN Exp


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    LBRACE (258) 4
    RBRACE (259) 4
    SC (260) 5 6 7 8 9 12 13
    IF (261) 10
    ELSE (262)
    WHILE (263) 11
    BREAK (264) 12
    CONTINUE (265) 13
    RETURN (266) 9
    INT (267) 15
    BYTE (268) 16
    BOOL (269) 17
    TRUE (270) 24
    FALSE (271) 25
    BINOP (272) 18
    TYPE (273)
    ID (274) 5 6 7 14 19
    STRING (275) 23
    NUM (276) 21 22
    B (277) 22
    ASSIGN (278) 6 7
    OR (279) 28
    AND (280) 27
    RELOP (281) 29
    NOT (282) 26
    CAST (283)
    DOUBLEOP (284)
    LPAREN (285) 10 11 14 30 31
    RPAREN (286) 10 11 14 30 31


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    Program (37)
        on left: 1
        on right: 0
    Statements (38)
        on left: 2 3
        on right: 1 3 4
    Statement (39)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3 10 11
    Call (40)
        on left: 14
        on right: 8 20
    Type (41)
        on left: 15 16 17
        on right: 5 6 31
    Exp (42)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 6 7 10 11 14 18 26 27 28 29 30 31


State 0

    0 $accept: • Program $end

    LBRACE    shift, and go to state 1
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    Program     go to state 11
    Statements  go to state 12
    Statement   go to state 13
    Call        go to state 14
    Type        go to state 15


State 1

    4 Statement: LBRACE • Statements RBRACE

    LBRACE    shift, and go to state 1
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    Statements  go to state 16
    Statement   go to state 13
    Call        go to state 14
    Type        go to state 15


State 2

   10 Statement: IF • LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 17


State 3

   11 Statement: WHILE • LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 18


State 4

   12 Statement: BREAK • SC

    SC  shift, and go to state 19


State 5

   13 Statement: CONTINUE • SC

    SC  shift, and go to state 20


State 6

    9 Statement: RETURN • SC

    SC  shift, and go to state 21


State 7

   15 Type: INT •

    $default  reduce using rule 15 (Type)


State 8

   16 Type: BYTE •

    $default  reduce using rule 16 (Type)


State 9

   17 Type: BOOL •

    $default  reduce using rule 17 (Type)


State 10

    7 Statement: ID • ASSIGN Exp SC
   14 Call: ID • LPAREN Exp RPAREN

    ASSIGN  shift, and go to state 22
    LPAREN  shift, and go to state 23


State 11

    0 $accept: Program • $end

    $end  shift, and go to state 24


State 12

    1 Program: Statements •
    3 Statements: Statements • Statement

    LBRACE    shift, and go to state 1
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    $default  reduce using rule 1 (Program)

    Statement  go to state 25
    Call       go to state 14
    Type       go to state 15


State 13

    2 Statements: Statement •

    $default  reduce using rule 2 (Statements)


State 14

    8 Statement: Call • SC

    SC  shift, and go to state 26


State 15

    5 Statement: Type • ID SC
    6          | Type • ID ASSIGN Exp SC

    ID  shift, and go to state 27


State 16

    3 Statements: Statements • Statement
    4 Statement: LBRACE Statements • RBRACE

    LBRACE    shift, and go to state 1
    RBRACE    shift, and go to state 28
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    Statement  go to state 25
    Call       go to state 14
    Type       go to state 15


State 17

   10 Statement: IF LPAREN • Exp RPAREN Statement

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 37


State 18

   11 Statement: WHILE LPAREN • Exp RPAREN Statement

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 38


State 19

   12 Statement: BREAK SC •

    $default  reduce using rule 12 (Statement)


State 20

   13 Statement: CONTINUE SC •

    $default  reduce using rule 13 (Statement)


State 21

    9 Statement: RETURN SC •

    $default  reduce using rule 9 (Statement)


State 22

    7 Statement: ID ASSIGN • Exp SC

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 39


State 23

   14 Call: ID LPAREN • Exp RPAREN

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 40


State 24

    0 $accept: Program $end •

    $default  accept


State 25

    3 Statements: Statements Statement •

    $default  reduce using rule 3 (Statements)


State 26

    8 Statement: Call SC •

    $default  reduce using rule 8 (Statement)


State 27

    5 Statement: Type ID • SC
    6          | Type ID • ASSIGN Exp SC

    SC      shift, and go to state 41
    ASSIGN  shift, and go to state 42


State 28

    4 Statement: LBRACE Statements RBRACE •

    $default  reduce using rule 4 (Statement)


State 29

   24 Exp: TRUE •

    $default  reduce using rule 24 (Exp)


State 30

   25 Exp: FALSE •

    $default  reduce using rule 25 (Exp)


State 31

   14 Call: ID • LPAREN Exp RPAREN
   19 Exp: ID •

    LPAREN  shift, and go to state 23

    $default  reduce using rule 19 (Exp)


State 32

   23 Exp: STRING •

    $default  reduce using rule 23 (Exp)


State 33

   21 Exp: NUM •
   22    | NUM • B

    B  shift, and go to state 43

    $default  reduce using rule 21 (Exp)


State 34

   26 Exp: NOT • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 44


State 35

   30 Exp: LPAREN • Exp RPAREN
   31    | LPAREN • Type RPAREN Exp

    INT     shift, and go to state 7
    BYTE    shift, and go to state 8
    BOOL    shift, and go to state 9
    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Type  go to state 45
    Exp   go to state 46


State 36

   20 Exp: Call •

    $default  reduce using rule 20 (Exp)


State 37

   10 Statement: IF LPAREN Exp • RPAREN Statement
   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    BINOP   shift, and go to state 47
    OR      shift, and go to state 48
    AND     shift, and go to state 49
    RELOP   shift, and go to state 50
    RPAREN  shift, and go to state 51


State 38

   11 Statement: WHILE LPAREN Exp • RPAREN Statement
   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    BINOP   shift, and go to state 47
    OR      shift, and go to state 48
    AND     shift, and go to state 49
    RELOP   shift, and go to state 50
    RPAREN  shift, and go to state 52


State 39

    7 Statement: ID ASSIGN Exp • SC
   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    SC     shift, and go to state 53
    BINOP  shift, and go to state 47
    OR     shift, and go to state 48
    AND    shift, and go to state 49
    RELOP  shift, and go to state 50


State 40

   14 Call: ID LPAREN Exp • RPAREN
   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    BINOP   shift, and go to state 47
    OR      shift, and go to state 48
    AND     shift, and go to state 49
    RELOP   shift, and go to state 50
    RPAREN  shift, and go to state 54


State 41

    5 Statement: Type ID SC •

    $default  reduce using rule 5 (Statement)


State 42

    6 Statement: Type ID ASSIGN • Exp SC

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 55


State 43

   22 Exp: NUM B •

    $default  reduce using rule 22 (Exp)


State 44

   18 Exp: Exp • BINOP Exp
   26    | NOT Exp •
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    $default  reduce using rule 26 (Exp)


State 45

   31 Exp: LPAREN Type • RPAREN Exp

    RPAREN  shift, and go to state 56


State 46

   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp
   30    | LPAREN Exp • RPAREN

    BINOP   shift, and go to state 47
    OR      shift, and go to state 48
    AND     shift, and go to state 49
    RELOP   shift, and go to state 50
    RPAREN  shift, and go to state 57


State 47

   18 Exp: Exp BINOP • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 58


State 48

   28 Exp: Exp OR • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 59


State 49

   27 Exp: Exp AND • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 60


State 50

   29 Exp: Exp RELOP • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 61


State 51

   10 Statement: IF LPAREN Exp RPAREN • Statement

    LBRACE    shift, and go to state 1
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    Statement  go to state 62
    Call       go to state 14
    Type       go to state 15


State 52

   11 Statement: WHILE LPAREN Exp RPAREN • Statement

    LBRACE    shift, and go to state 1
    IF        shift, and go to state 2
    WHILE     shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    RETURN    shift, and go to state 6
    INT       shift, and go to state 7
    BYTE      shift, and go to state 8
    BOOL      shift, and go to state 9
    ID        shift, and go to state 10

    Statement  go to state 63
    Call       go to state 14
    Type       go to state 15


State 53

    7 Statement: ID ASSIGN Exp SC •

    $default  reduce using rule 7 (Statement)


State 54

   14 Call: ID LPAREN Exp RPAREN •

    $default  reduce using rule 14 (Call)


State 55

    6 Statement: Type ID ASSIGN Exp • SC
   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    SC     shift, and go to state 64
    BINOP  shift, and go to state 47
    OR     shift, and go to state 48
    AND    shift, and go to state 49
    RELOP  shift, and go to state 50


State 56

   31 Exp: LPAREN Type RPAREN • Exp

    TRUE    shift, and go to state 29
    FALSE   shift, and go to state 30
    ID      shift, and go to state 31
    STRING  shift, and go to state 32
    NUM     shift, and go to state 33
    NOT     shift, and go to state 34
    LPAREN  shift, and go to state 35

    Call  go to state 36
    Exp   go to state 65


State 57

   30 Exp: LPAREN Exp RPAREN •

    $default  reduce using rule 30 (Exp)


State 58

   18 Exp: Exp • BINOP Exp
   18    | Exp BINOP Exp •
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    OR     shift, and go to state 48
    AND    shift, and go to state 49
    RELOP  shift, and go to state 50

    BINOP  error (nonassociative)

    $default  reduce using rule 18 (Exp)


State 59

   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   28    | Exp OR Exp •
   29    | Exp • RELOP Exp

    AND    shift, and go to state 49
    RELOP  shift, and go to state 50

    $default  reduce using rule 28 (Exp)


State 60

   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   27    | Exp AND Exp •
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp

    RELOP  shift, and go to state 50

    $default  reduce using rule 27 (Exp)


State 61

   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp
   29    | Exp RELOP Exp •

    $default  reduce using rule 29 (Exp)


State 62

   10 Statement: IF LPAREN Exp RPAREN Statement •

    $default  reduce using rule 10 (Statement)


State 63

   11 Statement: WHILE LPAREN Exp RPAREN Statement •

    $default  reduce using rule 11 (Statement)


State 64

    6 Statement: Type ID ASSIGN Exp SC •

    $default  reduce using rule 6 (Statement)


State 65

   18 Exp: Exp • BINOP Exp
   27    | Exp • AND Exp
   28    | Exp • OR Exp
   29    | Exp • RELOP Exp
   31    | LPAREN Type RPAREN Exp •

    $default  reduce using rule 31 (Exp)
